sort.basic.lessons.sort.basic.shell.AlgShellSort.scala.code
def shellSort()  {
  var lgr = getNombreValeurs()
  var ecart = lgr/2
  while(ecart>1){
    for (i <- 1 to lgr-1){
      var diffcase = 1
      var v = getValeur(i)
      while(i-diffcase*ecart >= 0 && v<getValeur(i-diffcase*ecart)){  
        setValeur(i-diffcase*ecart+1,getValeur(i-diffcase*ecart))
        diffcase*ecart=diffcase*ecart+1
      }
      setValeur(i-diffcase*ecart+1,v)
      
    }
    ecart= ecart/2
  }

}